--- a/templates/signup.html
+++ b/templates/signup.html
@@ -22,10 +22,18 @@
         {{form.last_name.label}} <br/>
         {{form.last_name(size=30)}}
     </p>  
-    <p>
+
         {{form.email.label}} <br/>
         {{form.email(size=30)}} 
     </p>
+    <p>
+        {{form.pet_name.label}} <br/>
+        {{form.pet_name(size=30)}} 
+    <p>  
+    <p>
+        {{form.type.label}} <br/>
+        {{form.type(size=30)}} 
+    <p>
 
     <p>
         {{form.submit()}} <br/>
